Starting work in earnest on a PubMed Central document loader. I just had a good idea, and can pick up where I left off (see pmc_oai_functions.py).

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 --index-url https://pypi.python.org/simple/
 nltk>=3.0
 requests
-pattern
 pymongo
 pyyaml
 unicodecsv
 scikit-learn
+beautifulsoup4
+
+future
+builtins
+past
+six
